# gpu-arbiter

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/: settings.json
.github/workflows/: auto-release.yml  claude-pr-review.yml  lint.yml  release.yml  rust.yml
man/: gpu-arbiter-config.5  gpu-arbiter.1  gpu-arbiter.8
packaging/: config.example.toml  gpu-arbiter.service
packaging/aur/: README.md
packaging/aur/gpu-arbiter/: .SRCINFO  PKGBUILD
packaging/aur/gpu-arbiter-bin/: .SRCINFO  PKGBUILD
src/: classify.rs  cli.rs  config.rs  gpu.rs  http.rs  lib.rs  main.rs  ollama.rs  presence.rs  procmon.rs  reconcile.rs  state.rs  units.rs
